# tecjustica-transcribe-cli

./: README.md  install.sh  pyproject.toml
src/tecjustica_transcribe/: __init__.py
src/tecjustica_transcribe/core/: transcription.py
src/tecjustica_transcribe/gui/: __main__.py  app.py
src/tecjustica_transcribe/gui/pages/: configuracoes.py  diagnostico.py  modelos.py  transcricao.py
